--- a/ggg.html
+++ b/ggg.html
@@ -1,3 +1,6 @@
+
+cd "folder name"
+
 git config --user.name  ""
                  .email  ""
 
@@ -5,6 +8,10 @@ git config --global init.defaultBranch main
 
 
 git remote add orgin <url-link>
+
+
+#add files 
+
 
 git add. 
 
@@ -19,6 +26,10 @@ git push origin main
 
                     ##### MERGING BRANCHING #########
 
+
+cd "folder name "
+
+  
 git remote add origin <url-link>
 
 git checkout -b <branch-name>
@@ -26,6 +37,10 @@ git checkout -b <branch-name>
 #add files /cretae files 
 
 git add.
+
+  git checkout main 
+
+  git merge <branch-name>
 
 git commit -m "message"
 
@@ -79,3 +94,5 @@ git push origin main
 
 
 
+
+      
