--- a/ggg.html
+++ b/ggg.html
@@ -52,9 +52,12 @@ git push origin main
                  ##ISSUE##
 
 #CREATE ISSUSE ON GITHUB 
+    ###make change in file
+        and add to files###
+  git add .
 
 
-git commit -m "Fix#1: sdfsdvsvs"
+git commit -m "Fix#1: resolved"
 git push origin main
 
 
