--- a/ggg.html
+++ b/ggg.html
@@ -1,8 +1,8 @@
-
+         ######for push#####
 cd "folder name"
 
 git config --user.name  ""
-                 .email  ""
+git config --user.email  ""
 
 git config --global init.defaultBranch main
 
@@ -21,13 +21,23 @@ git commit -m "message "
 git push origin main 
 
 
+ #####For pull ######
+ ##same as above but put pull####
 
+  git pull origin main
+  
 
 
                     ##### MERGING BRANCHING #########
 
 
 cd "folder name "
+  
+git config --user.name  ""
+git config --user.email  ""
+
+git config --global init.defaultBranch main
+
 
   
 git remote add origin <url-link>
@@ -50,6 +60,17 @@ git push origin main
 
 
                  ##ISSUE##
+
+    cd "folder name"
+
+git config --user.name  ""
+git config --user.email  ""
+
+git config --global init.defaultBranch main
+
+
+git remote add orgin <url-link>
+
 
 #CREATE ISSUSE ON GITHUB 
     ###make change in file
