--- a/ggg.html
+++ b/ggg.html
@@ -42,9 +42,9 @@ git config --global init.defaultBranch main
   
 git remote add origin <url-link>
 
-git checkout -b <branch-name>
+git checkout -b <branch-name>                 
 
-#add files /cretae files 
+#####add files /cretae files or changes in files#####
 
 git add.
 
@@ -104,7 +104,7 @@ git push origin main
 
 
 
-
+     
 
 
 
